[Fix] Overflow issue

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -17,6 +17,8 @@ body {
 	font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
 		Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 	font-weight: 400;
+	height: 100%;
+	background-color: #f3f4f6;
 }
 
 a {
